Increase the size of the bullets and prevent wrapping under bullet

--- a/ui/css/module/_listitem.scss
+++ b/ui/css/module/_listitem.scss
@@ -1,5 +1,6 @@
 .node-list-item {
   @extend .clearfix;
+  position: relative;
   margin-bottom: 8px;
   $marker-width-xs: 24px;
   $marker-padding-xs: 4px;
@@ -7,24 +8,36 @@
   $marker-padding-md: $marker-padding-xs + 4;
 
   .list-item-marker {
+    position: absolute;
     @extend .right-align;
     @include font-san-serif-bold();
     width: $marker-width-xs;
+    width: calc(#{$marker-width-xs} + .8rem);
     padding-right: $marker-padding-xs;
     display: inline-block;
-    float: left;
 
     @media #{$breakpoint-md} {
       width: $marker-width-md;
+      width: calc(#{$marker-width-md} + .8rem);
       padding-right: $marker-padding-md;
     }
   }
 
   .list-item-text {
-    margin-left: $marker-width-xs + $marker-padding-xs;
+    margin-left: $marker-width-xs + $marker-padding-xs + 20px;
 
     @media #{$breakpoint-md} {
-      margin-left: $marker-width-md + $marker-padding-md;
+      margin-left: $marker-width-md + $marker-padding-md + 20px;
     }
   }
+}
+
+.list-item-text p {
+  line-height: 1.5rem;
+  margin-bottom: 0px;
+}
+
+.list-style-bullet .list-item-marker {
+  font-size: 26px;
+  line-height: 1.5rem;
 }
